syntax = "proto3";

package auth;

option go_package = "./auth;auth";

import "google/protobuf/empty.proto";

service Auth {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Introspect(google.protobuf.Empty) returns (IntrospectResponse);
}

message LoginRequest { 
  string username = 1; 
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message IntrospectResponse {
  string username = 1;
}
